--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -1,4 +1,5 @@
 /*! bulma.io v0.7.5 | MIT License | github.com/jgthms/bulma */
+@import url("https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap");
 @keyframes spinAround {
   from {
     transform: rotate(0deg); }
@@ -6955,3 +6956,7 @@ label.panel-block {
 .footer {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem; }
+
+.title,
+.subtitle {
+  font-family: "Abril Fatface", cursive; }
