--- a/sass/mystyles.scss
+++ b/sass/mystyles.scss
@@ -1,2 +1,7 @@
 @charset "utf-8";
 @import "../node_modules/bulma/bulma.sass";
+@import url('https://fonts.googleapis.com/css?family=Abril+Fatface&display=swap');
+
+.title, .subtitle {
+  font-family: "Abril Fatface", cursive;
+}
